--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -1580,8 +1580,9 @@ encrypted.  It went from there.
 
 \section{Prepared Defences}
 
-Please note that the EBU does not recommend providing prepared defences to systems.
-Nontheless, if you would find these useful here are some {\em simple} defences to our system. 
+Please note that the EBU does not recommend providing prepared defences to
+systems.  Nontheless, if you would find these useful here are some {\em simple}
+defences to our system, but there are probably several better ones.
 
 \subsection{1 level bids}
 
@@ -1592,6 +1593,7 @@ Nontheless, if you would find these useful here are some {\em simple} defences t
 	\item Your defence to a possibly short club
 	\item Your defence to a weak no-trump
 	\item Your defence to a natural club opening 
+	\item Your defence to a polish club
 	\end{itemize}
 \item 1$\diamondsuit$
 	\begin{itemize}
@@ -1646,7 +1648,7 @@ Nontheless, if you would find these useful here are some {\em simple} defences t
 	\begin{itemize}
 	\item X = takeout (showing hearts and clubs)
 	\item 3$\clubsuit$/$\heartsuit$ = natural overcalls
-	\item 3$\spadesuit$/$\diamondsuit$ = asking for a stop for 3NT
+	\item 3$\diamondsuit$/$\spadesuit$ = asking for a stop for 3NT
 	\end{itemize}
 \end{itemize}
 
