--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -1396,6 +1396,12 @@ A few general principles here:
 	\item XX = weak 2 suiter
 	\item 2N = GF two suiter
    \end{itemize}
+\item 2N-(x):
+   \begin{itemize}
+	\item Pass = no preference, weak
+	\item XX = no preference, strong
+	\item others = as normal
+   \end{itemize}
 \end{itemize}
 
 \newpage
