add WBF level and move some sections around

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -29,16 +29,35 @@
 \maketitle
 \tableofcontents
 
-\newpage
-
-\section{System description}
-\label{sec:system}
+\section{Administriva}
+\label{sec:admin}
 
 \subsection{Notation}
 \label{sec:notation}
 
 References to the EBU Orange Book will be given as \orange{11C3}. References
 elsewhere in this document will be given as \xref{sec:resp:2level}.
+
+\subsection{System regulation}
+
+Allowed systems are determined by the Regulating Authority for a given event.
+This system is primarily played under the auspices of the English Bridge Union
+and is allowed at Level 4 \orange{9B}, which is the standard tournament level
+in England. Events not directly run by the EBU may have other restrictions.
+References to the Orange Book sections allowing each convention at Level 4 are
+given throughout the document.
+
+\subsubsection{WBF classification}
+
+Under the WBF classification system this is a Red system with Brown Sticker
+Conventions. Thus, it is not legal in Category 3 WBF events and in Category 2
+events the card with suggested defences and appropriate forms must be submitted
+in advance. Suggested defences are given in Appendix \ref{appx:defences}.
+
+\newpage
+
+\section{System description}
+\label{sec:system}
 
 \subsection{Philosophy}
 \label{sec:philosophy}
@@ -1585,6 +1604,7 @@ encrypted.  It went from there.
 \setcounter{section}{0}
 
 \section{Prepared Defences}
+\label{appx:defences}
 
 Please note that the EBU does not recommend providing prepared defences to
 systems.  Nontheless, if you would find these useful here are some {\em simple}
