--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -313,8 +313,9 @@ Shows an 11 trick hand missing two of the top three trump honours. Raise one lev
 			\end{itemize}
 		\item Continuations:
 			\begin{itemize}
-			\item Responder will bid the next suit (relay). Opener then rebids NT with the
-				single-suited hand, or a suit with the two/three-suited option.
+			\item Responder will bid the next suit (relay). Opener then rebids 2NT with the
+				single-suited hand, a suit with the two/three-suited option or 3NT with
+				a 4/5 loser hand with a solid single suiter (top-range sub-game-force).
 			\item After GF+ suit agreement with a 3-suiter, 3N by opener shows no wish to make
 				a slam try. Bidding the short suit shows a void and bidding a long suit shows
 				a significantly better suit.
