separate defences, update cards, add table of references to notes

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -29,6 +29,28 @@
 \maketitle
 \tableofcontents
 
+\section*{Notes from system card}
+\begin{tabular*}{\textwidth}{ll@{\extracolsep{\fill}}r}
+1. & 2NT encrypted raise & \pageref{note:1} \\
+2. & Jump fit & \pageref{note:2} \\
+4. & 1$\spadesuit$ negative & \pageref{note:4} \\
+5. & 1N F1 response & \pageref{note:5} \\
+6. & 3M/4m splinter & \pageref{note:6} \\
+7. & 2N enquiry responses & \pageref{note:7} \\
+8. & 3$\clubsuit$ 5-card puppet Stayman & \pageref{note:8} \\
+8a. & 2$\clubsuit$ 5-card puppet Keri & \pageref{note:8a} \\
+9. & Responses to a natural 1NT & \pageref{note:9} \\
+10. & 2NT--3$\spadesuit$ & \pageref{note:8} \\
+13. & Lebensohl & \pageref{note:13} \\
+14. & Responses to 1$\clubsuit$ & \pageref{note:14} \\
+15. & Dixon & \pageref{note:15} \\
+18. & Responses to 2x & \pageref{note:18} \\
+19. & General Swiss & \pageref{note:19} \\
+20. & Suction wriggle & \pageref{note:20} \\
+\end{tabular*}
+
+\newpage
+
 \section{Administriva}
 \label{sec:admin}
 
@@ -244,6 +266,7 @@ Shows an 11 trick hand missing two of the top three trump honours. Raise one lev
 \label{sec:resp:1level}
 
 \begin{itemize}
+\label{note:14}
 \item 1$\clubsuit$:
 	\begin{itemize}
    \item 1$\diamondsuit$ = 0--9, no 6-card suit
@@ -339,6 +362,7 @@ Shows an 11 trick hand missing two of the top three trump honours. Raise one lev
 		\end{itemize}
 	\end{itemize}
 
+
 \item 1$\heartsuit$ if not denying $\heartsuit$:
 	\begin{itemize}
    \item 1$\spadesuit$ = forcing enquiry.
@@ -358,12 +382,15 @@ Shows an 11 trick hand missing two of the top three trump honours. Raise one lev
 		\item Cues or Swiss~\xref{sec:swiss} above the trump suit
 		\end{itemize}
    \item 2$\spadesuit$/3$\spadesuit$/4$\spadesuit$ = to play/limit raise/to play.
+\label{note:1}
    \item 2NT = good raise, with exactly one of $\spadesuit$ AK \xref{sec:encryption}.
 		\begin{itemize}
       \item Next bid shows 0/1 loser and the $\spadesuit$ K, or 2/3 losers and the SA.
          Rebidding $\spadesuit$ denies the other top honour.
 		\end{itemize}
+\label{note:2}
    \item 3$\clubsuit$/3$\diamondsuit$ = fit jump.
+\label{note:6}
    \item 3$\heartsuit$/4$\clubsuit$/$\diamondsuit$ = splinter agreeing spades
 	\item 4$\heartsuit$ = to play
 	\end{itemize}
@@ -371,7 +398,9 @@ Shows an 11 trick hand missing two of the top three trump honours. Raise one lev
 
 \item 1$\heartsuit$ (if denying $\heartsuit$):
 	\begin{itemize}
+\label{note:4}
    \item 1$\spadesuit$/2$\spadesuit$/3$\spadesuit$/4$\spadesuit$ = to play/limit raises/to play.
+\label{note:5}
    \item 1NT = 1-round force.
    \item 2$\clubsuit$/$\diamondsuit$ = natural, forcing.
    \item 2$\heartsuit$ = good raise, neither or both of $\spadesuit$ AK.
@@ -420,6 +449,7 @@ Shows an 11 trick hand missing two of the top three trump honours. Raise one lev
    \item 2$\clubsuit$/$\diamondsuit$: weak, to play.
    \item 2$\heartsuit$/$\spadesuit$: preference, to play.
    \item 2NT: forcing enquiry:
+\label{note:7}
 		\begin{itemize}
       \item 3$\clubsuit$/$\diamondsuit$ weak, 3$\heartsuit$/$\spadesuit$ strong. 3$\clubsuit$/$\heartsuit$ better $\heartsuit$, 3$\diamondsuit$/$\spadesuit$ better $\spadesuit$.
 		\end{itemize}
@@ -431,6 +461,7 @@ Shows an 11 trick hand missing two of the top three trump honours. Raise one lev
 
 \subsubsection{2 level}
 \label{sec:resp:2level}
+\label{note:18}
 
 \item 2$\clubsuit$:
 	\begin{itemize}
@@ -605,6 +636,8 @@ depending on range.
 
 \item 2$\clubsuit$ is 5-card puppet Keri (see below), which allows the system to be used with weak diamond hands with either tolerance for the majors or playing in 3$\diamondsuit$. (e.g. 2=3=6=2 pattern with very limited values).
 
+\label{note:9}
+
 \item 2$\diamondsuit$ and 2$\heartsuit$ are transfers; transfer breaks apply with any 4-card fit.  2NT
 shows 4/5-card support, no side 4-card suit, and a maximum.  Other suits
 show 4 cards, and 4-card support with a maximum.  A simple jump acceptance
@@ -641,6 +674,7 @@ pass, or bid 3NT with (e.g.) Kxx in the suit.
 \end{itemize}
 
 \paragraph{Responses to 5-card puppet Keri}
+\label{note:8a}
 
 Because we may have already established a game-force before bidding 1NT and we
 use the principle of fast-arrival some of the ranges vary. In the responses
@@ -704,6 +738,7 @@ available. Either in a suit if one has been agreed or for no-trumps.
 
 \subsubsection{After 1NT is doubled for penalties}
 \label{sec:resp:1nx}
+\label{note:20}
 
 We play a modified form of suction as the escape after 1NT-X.
 
@@ -751,6 +786,7 @@ penalties.
 
 \subsubsection{After direct overcalls of 1NT}
 \label{sec:resp:lebensohl}
+\label{note:13}
 
 Lebensohl:
 
@@ -779,6 +815,7 @@ Lebensohl:
 \label{sec:resp:2n}
 
 \begin{itemize}
+\label{note:8}
 \item 3$\clubsuit$: advanced 5-card puppet Stayman
 	\begin{itemize}
    \item 3$\heartsuit$/$\spadesuit$ shows 5 cards.
@@ -809,6 +846,7 @@ Lebensohl:
 \item 3$\diamondsuit$/3$\heartsuit$: transfers.  Superaccept with any 4-card fit; note that 3NT is a
 superaccept that still allows the use of Swiss.
 
+\label{note:10}
 \item 3$\spadesuit$: minor-suit Stayman.  Asks for a 4- or 5-card minor.
 	\begin{itemize}
    \item 3NT = no 4-card minor.
@@ -902,6 +940,7 @@ control showing cue agreeing the most recently shown suit.
 
 \subsection{General Swiss}
 \label{sec:swiss}
+\label{note:19}
 
 4$\clubsuit$/4$\diamondsuit$, once a game-force is established and suit agreed, are slam tries, based
 on control points.
@@ -1202,6 +1241,7 @@ is natural. \orange{11M2}
 \subsubsection{Multi 2$\diamondsuit$}
 \label{sec:def:multi}
 
+\label{note:15}
 Dixon \orange{11Q2}:
 
 \begin{itemize}
@@ -1604,80 +1644,6 @@ encrypted.  It went from there.
 \def\thesection{\Alph{section}}
 \setcounter{section}{0}
 
-\section{Prepared Defences}
-\label{appx:defences}
-
-Please note that the EBU does not recommend providing prepared defences to
-systems.  Nontheless, if you would find these useful here are some {\em simple}
-defences to our system, but there are probably several better ones.
-
-\subsection{1 level bids}
-
-\begin{itemize}
-\item 1$\clubsuit$
-	One of the following:
-	\begin{itemize}
-	\item Your defence to a possibly short club
-	\item Your defence to a weak no-trump
-	\item Your defence to a natural club opening 
-	\item Your defence to a polish club
-	\end{itemize}
-\item 1$\diamondsuit$
-	\begin{itemize}
-	\item Defend the same as you would a strong (e.g. precision) club
-	\end{itemize}
-\item 1$\heartsuit$
-	\begin{itemize}
-	\item X = a heart overcall
-	\item 1$\spadesuit$ = takeout of spades
-	\item 1N = normal 1N overcall range showing a spade stop
-	\item suits = natural overcalls
-	\item 2$\spadesuit$ = whatever a cue of a natural 1 spade would mean 
-	\item Jump bids = normal jump-overcall range
-	\end{itemize}
-\item 1$\spadesuit$
-	\begin{itemize}
-	\item X = takeout of hearts
-	\item 1N = normal 1N overcall range showing a heart stop
-	\item suits = natural overcalls
-	\item 2$\heartsuit$ = whatever a cue of a natural 1 heart would mean 
-	\item Jump bids = normal jump-overcall range
-	\end{itemize}
-
-\newpage
-
-\item 1NT
-	\begin{itemize}
-	\item X = clubs and diamonds
-	\item 2$\clubsuit$/$\diamondsuit$ = natural overcall
-	\item 2$\heartsuit$/$\spadesuit$ = asking for a stop for NT
-	\item 2NT = decent NT overcall range with stops in both majors
-	\item Jump bids = normal jump-overcall range
-	\end{itemize}
-\end{itemize}
-
-\subsection{2 level bids}
-
-\begin{itemize}
-\item 2$\clubsuit$/$\diamondsuit$/$\heartsuit$
-	\begin{itemize}
-	\item X = an overcall in the suit bid
-	\item suits = natural overcalls
-	\item 2N = normal 2N over a weak-two range with some values in the other three suits
-	\end{itemize}
-\item 2$\spadesuit$
-	\begin{itemize}
-	\item X = takeout of hearts
-	\item 2N = normal 2N over a weak-two range with a decent heart stop
-	\item suits = natural overcalls
-	\end{itemize}
-\item 2NT
-	\begin{itemize}
-	\item X = takeout (showing hearts and clubs)
-	\item 3$\clubsuit$/$\heartsuit$ = natural overcalls
-	\item 3$\diamondsuit$/$\spadesuit$ = asking for a stop for 3NT
-	\end{itemize}
-\end{itemize}
-
+\input{defences}
 
 \end{document}
