xfer preempts, namyats, 3rd-seat 1N

--- a/defences.tex
+++ b/defences.tex
@@ -38,8 +38,6 @@ defences to our system, but there are probably several better ones.
 	\item Jump bids = normal jump-overcall range
 	\end{itemize}
 
-\newpage
-
 \item 1NT
 	\begin{itemize}
 	\item X = clubs and diamonds
@@ -70,6 +68,32 @@ defences to our system, but there are probably several better ones.
 	\item X = takeout (showing hearts and clubs)
 	\item 3$\clubsuit$/$\heartsuit$ = natural overcalls
 	\item 3$\diamondsuit$/$\spadesuit$ = asking for a stop for 3NT
+	\end{itemize}
+\end{itemize}
+
+\subsection{3/4 level bids}
+
+\begin{itemize}
+\item 3$\clubsuit$/$\diamondsuit$/$\heartsuit$
+	\begin{itemize}
+	\item X = an overcall in the suit bid
+	\item next suit = takeout of that suit
+	\item 3N = normal 3N over a 3-level preempt with a stop in the suit shown (not bid)
+	\end{itemize}
+\item 3$\spadesuit$
+	\begin{itemize}
+	\item X = spade overcall (as of a 4-minor preempt or gambling 3N opening)
+	\item suits = natural overcalls (as of a 4-minor preempt or gambling 3N opening)
+	\end{itemize}
+\item 3NT
+	\begin{itemize}
+	\item X = both majors (takeoutish)
+	\item suits = natural overcalls (as of a 4-minor preempt)
+	\end{itemize}
+\item 4$\clubsuit$/$\diamondsuit$
+	\begin{itemize}
+	\item X = an overcall in the suit bid (as of a 3-major preempt)
+	\item suits = natural overcalls (as of a 3-major preempt)
 	\end{itemize}
 \end{itemize}
 
