fiddle the defences markup

--- a/defences.tex
+++ b/defences.tex
@@ -2,7 +2,7 @@
 \label{appx:defences}
 
 Please note that the EBU does not recommend providing prepared defences to
-systems.  Nontheless, if you would find these useful here are some {\em simple}
+systems.  Nonetheless, if you would find these useful here are some {\em simple}
 defences to our system, but there are probably several better ones.
 
 \subsection{1 level bids}
@@ -82,7 +82,7 @@ defences to our system, but there are probably several better ones.
 	\end{itemize}
 \item 3$\spadesuit$
 	\begin{itemize}
-	\item X = spade overcall (as of a 4-minor preempt or gambling 3N opening)
+	\item X = spade overcall (as of a 3-minor preempt or gambling 3N opening)
 	\item suits = natural overcalls (as of a 4-minor preempt or gambling 3N opening)
 	\end{itemize}
 \item 3NT
@@ -94,6 +94,7 @@ defences to our system, but there are probably several better ones.
 	\begin{itemize}
 	\item X = an overcall in the suit bid (as of a 3-major preempt)
 	\item suits = natural overcalls (as of a 3-major preempt)
+	\item our major = takeout
 	\end{itemize}
 \end{itemize}
 
