--- a/prepareddefences.tex
+++ b/prepareddefences.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,12pt]{extarticle}
+\documentclass[a4paper,twocolumn,10pt]{extarticle}
 
 \usepackage{palatino}
 \usepackage{fullpage}
@@ -18,6 +18,7 @@
   pdftitle={Prepared defences for Pascal's Encrypted Club},
   pdfauthor={Matthew Johnson and Henry Lockwood}]{hyperref}
 
+\setlength{\columnsep}{.25in}
 
 \author{Matthew Johnson\\Henry Lockwood}
 \title{Prepared defences for Pascal's Encrypted Club}
