some changes (keri 2C-X and new 1NT ranges)

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -175,21 +175,31 @@ All other positions and vulnerabilities:
 
 \paragraph{1NT}
 
-Varies depending upon position and vulnerability.
+Varies depending upon position, vulnerability and number of boards per round
 
-First or second seat non-vulnerable (events with 7+ boards per round only):
+First or second seat non-vulnerable:
 \begin{itemize}
 \item 9--11 balanced \orange{11F3}.
 \end{itemize}
 
-Third seat non-vulnerable (events with 7+ boards per round only):
+Third seat non-vulnerable:
 \begin{itemize}
 \item 9--15 balanced \orange{11F3}.
 \end{itemize}
 
-All other positions and vulnerabilities:
+First or second seat vulnerable (1--6 boards/round):
 \begin{itemize}
-\item 10--15 points, not balanced 4+ hearts, 4+ spades \orange{11F5}.
+\item 14--16 balanced \orange{11F3}.
+\end{itemize}
+
+All other positions and vulnerabilities (1--6 boards/round):
+\begin{itemize}
+\item 12--15 balanced \orange{11F3}.
+\end{itemize}
+
+All other positions and vulnerabilities (7+ boards/round):
+\begin{itemize}
+\item 10--15 points, not balanced, 4+ hearts and 4+ spades \orange{11F5}.
 \end{itemize}
 
 For responses see Sections~\xref{sec:resp:1nnat} and ~\xref{sec:resp:1nart}.
@@ -540,8 +550,8 @@ Shows an 11 trick hand missing two of the top three trump honours. Raise one lev
 If 1NT is natural not in third-seat non-vulnerable then the responses are
 detailed in the section ``Continuations after 1NT" \xref{sec:resp:1n}.
 
-In the case of the third-seat non-vulnerable 1NT showing 9--15 balanced
-the responses are weak takeout.
+In the case of the third- or fourth-seat non-vulnerable 1NT the responses are
+weak takeout.
 
 \subsubsection{Artificial 1NT}
 \label{sec:resp:1nart}
@@ -762,6 +772,15 @@ depending on range.
 \item 2$\clubsuit$ is 5-card puppet Keri (see below), which allows the system to be used with weak diamond hands with either tolerance for the majors or playing in 3$\diamondsuit$. (e.g. 2=3=6=2 pattern with very limited values).
 
 \label{note:9}
+
+After 2$\clubsuit$ is doubled:
+
+	\begin{itemize}
+	\item Pass = no 4 or 5 card major, no diamond fit
+	\item XX = a 4 card major
+	\item 2$\diamondsuit$ = diamond fit, no 4 or 5 card major
+	\item 2$\heartsuit$/$\spadesuit$ = 5 card suit
+	\end{itemize}
 
 \item 2$\diamondsuit$ and 2$\heartsuit$ are transfers; transfer breaks apply with any 4-card fit.  2NT
 shows 4/5-card support, no side 4-card suit, and a maximum.  Other suits
