--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -446,12 +446,10 @@ Shows an 11 trick hand missing two of the top three trump honours. Raise one lev
 			\item After GF+ suit agreement with a 3-suiter, 3N by opener shows no wish to make
 				a slam try. Bidding the short suit shows a void and bidding a long suit shows
 				a significantly better suit.
-			\item After 1$\diamondsuit$-1$\spadesuit$ and showing suit(s) by opener, bidding 4$\clubsuit$/$\diamondsuit$
+			\item After 1$\diamondsuit$-1x and showing suit(s) by opener, bidding 4$\clubsuit$/$\diamondsuit$
 				is Swiss \xref{sec:swiss} agreeing opener's most recently bid suit, bidding one of the other suits below 
-				game is slam inviting asking opener to bid swiss for that suit. Other available suits are first-round cues.
-			\item After 1$\diamondsuit$-1$\heartsuit$ and showing suit(s) by opener, bidding 4$\clubsuit$/$\diamondsuit$
-				is Swiss \xref{sec:swiss} agreeing opener's most recently bid suit, bidding one of the other suits below 
-				game is game inviting. Other available suits ask for a stop.
+				game is slam inviting asking opener to bid swiss for that suit. Other suits below 3NT are an enquiry
+				either wanting a stop or to find out openers' longer suit.
 			\end{itemize}
       \item Jump suit rebids are GF, single-suited.
       \item 2NT rebid = 20--23 balanced; see ``Continuations after 2NT" \xref{sec:resp:2n}.
