include weak-clubs option in Keri

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -838,6 +838,7 @@ available. Either in a suit if one has been agreed or for no-trumps.
 	\begin{itemize}
 	\item 2$\heartsuit$/$\spadesuit$ with a 5-card major
 		\begin{itemize}
+		\item 3$\clubsuit$ to play
 		\item 3$\diamondsuit$ to play
 		\item other rebids are as after this sequence in 5 card puppet stayman.
 		\end{itemize}
@@ -871,7 +872,7 @@ available. Either in a suit if one has been agreed or for no-trumps.
 			\end{itemize}
 
 		\item 2NT = 3--3 majors; invitational strength.
-		\item 3$\clubsuit$/$\diamondsuit$ = 3--3 majors, GF, values in the minor.
+		\item 3$\clubsuit$ = to play
 		\item 3NT=3--3 majors, GF.
 		\end{itemize}
 	\end{itemize}
